Fix vertical spacing

--- a/client/me/purchases/manage-purchase/payment-method-selector/style.scss
+++ b/client/me/purchases/manage-purchase/payment-method-selector/style.scss
@@ -21,7 +21,7 @@
 
 	.contact-fields {
 		margin-top: 16px;
-		padding-bottom: 8px;
+		margin-bottom: 8px;
 	}
 
 	.checkout__step-wrapper.checkout__step-wrapper--last-step {
